# rust-verification-tools

aoc/2015/day1/: Cargo.toml
aoc/2015/day1-sf/: Cargo.toml
aoc/2015/day1-sf/src/: main.rs
aoc/2015/day1/src/: main.rs
aoc/2015/day2-sf/: Cargo.toml
aoc/2015/day2-sf/src/: main.rs
cargo-verify/: Cargo.toml
cargo-verify/src/: backends_common.rs  klee.rs  main.rs  proptest.rs  run_tools.rs  seahorn.rs  utils.rs
case-studies/: book.toml
case-studies/src/: SUMMARY.md  advent2015.md  introduction.md  rustlings.md  sources.md
demos/simple/argv/src/: main.rs
docker/: build
docker/klee/: build_klee
docker/rvt/: Dockerfile
docs/: using-propverify.md
propverify/src/: strategy.rs
scripts/: cargo-verify
