[package]
name = "cargo-verify"
version = "0.1.0"
authors = ["Shaked Flur <sflur@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log  = "0.4"
stderrlog = "0.5"
# inkwell = { git = "https://github.com/alastairreid/inkwell", features = ["llvm10-0"] }
cargo_metadata = "0.12.3"
regex = "1.4.3"
lazy_static = "1.4.0"
rustc-demangle = "0.1"
