[package]
name = "day1"
version = "0.1.0"
authors = ["Alastair Reid <adreid@google.com>"]
edition = "2018"

[dependencies]

[target.'cfg(not(verify))'.dependencies]
proptest = { version = "0.10" }

[target.'cfg(verify)'.dependencies]
propverify = { path="/home/rust-verification-tools/propverify" }
# propverify = { path="../../../../propverify" }

[features]
verifier-klee = ["propverify/verifier-klee"]
verifier-crux = ["propverify/verifier-crux"]
